<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/studio"
        android:icon="@drawable/studio_image_selector"
        android:title="@string/studio" />

    <item
        android:id="@+id/discover"
        android:icon="@drawable/discover_image_selector"
        android:title="@string/discover" />

    <item
        android:id="@+id/my_course"
        android:icon="@drawable/my_order_image_selector"
        android:title="@string/my_courses" />

    <item
        android:id="@+id/profile"
        android:title="@string/profile"
        android:icon="@drawable/profile_image_selector"
        app:showAsAction="collapseActionView|ifRoom"
        app:actionViewClass="android.widget.ImageView" />



</menu>
