<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/viewColor"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/lightgreen">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp">

            <ImageView
                android:id="@+id/image_back"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_centerVertical="true"
                android:padding="10dp"
                android:src="@drawable/arrow_back" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_marginBottom="5dp"
                android:gravity="center_vertical"
                android:text="@string/profile"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:orientation="horizontal">


                <ImageView
                    android:id="@+id/image_notification"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/notification" />

            </LinearLayout>

        </RelativeLayout>

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/pure_light"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/darkbalck"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/image_profile"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_centerInParent="true"
                        android:padding="5dp"/>

                    <ImageView
                        android:id="@+id/image_add"
                        android:layout_width="43dp"
                        android:layout_height="45dp"
                        android:layout_alignBottom="@+id/image_profile"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:src="@drawable/cam" />

                </RelativeLayout>

                <TextView
                    android:id="@+id/text_username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text=""
                    android:textColor="@color/lightgreen"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="14dp"
                    android:layout_marginBottom="24dp"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/text_enrolledcourses"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text=""
                            android:textColor="@color/white"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:text="@string/enrolledcourses"
                            android:textColor="@color/white"
                            android:textSize="12sp" />

                    </LinearLayout>

                    <View
                        android:layout_width="1dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center_vertical"
                        android:background="@color/white" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/text_followedtrainers"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text=""
                            android:textColor="@color/white"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:text="@string/followedtrainers"
                            android:textColor="@color/white"
                            android:textSize="12sp" />

                    </LinearLayout>


                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/text_privateinformation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:drawableEnd="@drawable/ic_keyboard_arrow_right_black_24dp"
                    android:padding="17dp"
                    android:text="@string/privateinformation"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/text_videooptions"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:layout_marginBottom="6dp"
                    android:background="@color/white"
                    android:drawableEnd="@drawable/ic_keyboard_arrow_right_black_24dp"
                    android:padding="17dp"
                    android:text="@string/videooptions"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/text_notifications"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:drawableEnd="@drawable/ic_keyboard_arrow_right_black_24dp"
                    android:padding="17dp"
                    android:text="@string/notifications"
                    android:textStyle="bold" />
            </LinearLayout>

            <TextView
                android:id="@+id/text_registerastrainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/registerastrainer"
                android:textColor="@color/red"
                android:textSize="12sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/text_aboutus"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:padding="17dp"
                    android:text="@string/aboutus"
                    android:textStyle="bold" />

                <View
                    android:layout_width="match_parent"
                    android:background="@color/gray_color"
                    android:visibility="gone"
                    android:layout_height="0.5dp"/>

                <TextView
                    android:id="@+id/text_mydownloads"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:padding="17dp"
                    android:visibility="gone"
                    android:text="@string/mydownloads"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/text_sharetheapp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="1dp"
                    android:background="@color/white"
                    android:padding="17dp"
                    android:text="@string/sharetheapp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/text_faqs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="1dp"
                    android:background="@color/white"
                    android:padding="17dp"
                    android:text="@string/faqs"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/text_contactus"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="1dp"
                    android:background="@color/white"
                    android:padding="17dp"
                    android:text="@string/contactus"
                    android:textStyle="bold" />

            </LinearLayout>

            <Button
                android:id="@+id/button_signout"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="50dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/rounded_button_gray"
                android:text="@string/signout"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>