<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.v4.view.ViewPager
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <com.viewpagerindicator.CirclePageIndicator
        android:id="@+id/circlepageindicator"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dots_height"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        app:centered="true"
        app:fillColor="@color/dot_active"
        app:pageColor="@color/dot_inactive">

    </com.viewpagerindicator.CirclePageIndicator>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_above="@id/circlepageindicator"
        android:alpha=".5"
        android:background="@android:color/white" />

    <Button
        android:id="@+id/btn_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:background="@null"
        android:text="@string/next"
        android:textColor="@color/abc1" />

    <Button
        android:id="@+id/btn_getstarted"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:background="@null"
        android:text="@string/getStarted"
        android:textColor="@color/abc1"
        android:visibility="gone" />

    <Button
        android:id="@+id/btn_skip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:background="@null"
        android:text="@string/skip"
        android:textColor="@color/abc1" />

</RelativeLayout>
